@startuml

title __GEOGRAPHICALOPERATORS's Class Diagram__\n

  namespace gr.ds.unipi.noda.api.neo4j {
    namespace filterOperators.geoperators.geographicalOperators {
      abstract class gr.ds.unipi.noda.api.neo4j.filterOperators.geoperators.geographicalOperators.GeographicalOperator {
          # GeographicalOperator()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.neo4j {
    namespace filterOperators.geoperators.geographicalOperators {
      class gr.ds.unipi.noda.api.neo4j.filterOperators.geoperators.geographicalOperators.Neo4JGeographicalOperatorFactory {
          + newOperatorGeoNearestNeighbors()
          + newOperatorInGeoCircle()
          + newOperatorInGeoPolygon()
          + newOperatorInGeoRectangle()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.neo4j {
    namespace filterOperators.geoperators.geographicalOperators {
      class gr.ds.unipi.noda.api.neo4j.filterOperators.geoperators.geographicalOperators.OperatorGeoNearestNeighbors {
          - neighbors : int
          + getOperatorExpression()
          {static} + newOperatorGeoNearestNeighbors()
          - OperatorGeoNearestNeighbors()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.neo4j {
    namespace filterOperators.geoperators.geographicalOperators {
      class gr.ds.unipi.noda.api.neo4j.filterOperators.geoperators.geographicalOperators.OperatorInGeographicalCircle {
          + getOperatorExpression()
          {static} + newOperatorInGeographicalCircle()
          - OperatorInGeographicalCircle()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.neo4j {
    namespace filterOperators.geoperators.geographicalOperators {
      class gr.ds.unipi.noda.api.neo4j.filterOperators.geoperators.geographicalOperators.OperatorInGeographicalPolygon {
          + getOperatorExpression()
          {static} + newOperatorInGeographicalPolygon()
          - OperatorInGeographicalPolygon()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.neo4j {
    namespace filterOperators.geoperators.geographicalOperators {
      class gr.ds.unipi.noda.api.neo4j.filterOperators.geoperators.geographicalOperators.OperatorInGeographicalRectangle {
          + getOperatorExpression()
          {static} + newOperatorInGeographicalRectangle()
          - OperatorInGeographicalRectangle()
      }
    }
  }
  

  gr.ds.unipi.noda.api.neo4j.filterOperators.geoperators.geographicalOperators.GeographicalOperator -up-|> gr.ds.unipi.noda.api.core.operators.filterOperators.geoperators.geographicalOperators.GeographicalOperator
  gr.ds.unipi.noda.api.neo4j.filterOperators.geoperators.geographicalOperators.Neo4JGeographicalOperatorFactory -up-|> gr.ds.unipi.noda.api.core.operators.filterOperators.geoperators.geographicalOperators.BaseGeographicalOperatorFactory
  gr.ds.unipi.noda.api.neo4j.filterOperators.geoperators.geographicalOperators.OperatorGeoNearestNeighbors -up-|> gr.ds.unipi.noda.api.neo4j.filterOperators.geoperators.geographicalOperators.GeographicalOperator
  gr.ds.unipi.noda.api.neo4j.filterOperators.geoperators.geographicalOperators.OperatorInGeographicalCircle -up-|> gr.ds.unipi.noda.api.neo4j.filterOperators.geoperators.geographicalOperators.GeographicalOperator
  gr.ds.unipi.noda.api.neo4j.filterOperators.geoperators.geographicalOperators.OperatorInGeographicalPolygon -up-|> gr.ds.unipi.noda.api.neo4j.filterOperators.geoperators.geographicalOperators.GeographicalOperator
  gr.ds.unipi.noda.api.neo4j.filterOperators.geoperators.geographicalOperators.OperatorInGeographicalRectangle -up-|> gr.ds.unipi.noda.api.neo4j.filterOperators.geoperators.geographicalOperators.GeographicalOperator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
